Multiple issues: Added some UI and wording changes, tooltips, and other smaller fixes

--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -73,7 +73,11 @@
       <p class="table-rows-selected">{{attributeTableOriginal.length}} rows, 0 selected</p>
 
       <div class="table-buttons">
-        <button mat-raised-button (click)="saveDataTable()" class="table-save-csv">
+        <button mat-raised-button
+                (click)="saveDataTable()"
+                class="table-save-csv"
+                matTooltip="Download layer data table as csv file"
+                [matTooltipShowDelay]="250">
           Download
         </button>
 
