--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -67,7 +67,11 @@
         <p class="table-rows-selected">{{attributeTable.data.length}} rows, 0 selected</p>
 
         <div class="table-buttons">
-          <button mat-raised-button (click)="saveDataTable()" class="table-save-csv">
+          <button mat-raised-button
+                  (click)="saveDataTable()"
+                  class="table-save-csv"
+                  matTooltip="Save time series data as csv file"
+                  [matTooltipShowDelay]="250">
             Download
           </button>
   
