Issue #278: Updated csv file formatting

--- a/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-text/dialog-text.component.html
@@ -24,7 +24,7 @@
     <button mat-raised-button
             (click)="saveText()"
             class="text-save-button"
-            matTooltip="Save report as {{fileExtension}} file"
+            matTooltip="Download report as {{fileExtension}} file"
             [matTooltipShowDelay]="250">
       Download
     </button>
