--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -70,7 +70,7 @@
           <button mat-raised-button
                   (click)="saveDataTable()"
                   class="table-save-csv"
-                  matTooltip="Save time series data as csv file"
+                  matTooltip="Download time series data as csv file"
                   [matTooltipShowDelay]="250">
             Download
           </button>
