--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -25,7 +25,27 @@
     <cdk-virtual-scroll-viewport tvsItemSize bufferMultiplier="0.7" class="wrapper mat-elevation-z2">
 
       <table mat-table [dataSource]="attributeTable">
-        <!-- All Columns -->
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="select" sticky>
+          <th class="mat-table-select-header" mat-header-cell *matHeaderCellDef>
+            <mat-checkbox class="check1"
+                          (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()"
+                          [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox class="check2"
+                          (click)="updateClickedRow($event, row)"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)"
+                          [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+        
+        <!-- All Remaining Columns -->
         <ng-container *ngFor="let property of attributeTable.data[0].properties | keyvalue;" matColumnDef="{{property.key}}">
           <th class="mat-table-header" mat-header-cell *matHeaderCellDef>
             <b>
@@ -70,7 +90,7 @@
     </cdk-virtual-scroll-viewport>
 
     <div class="table-info-components">
-      <p class="table-rows-selected">{{attributeTableOriginal.length}} rows, 0 selected</p>
+      <p class="table-rows-selected">{{attributeTableOriginal.length}} rows, {{matchedRows}} matched, {{selectedRows}} selected</p>
 
       <div class="table-buttons">
         <button mat-raised-button
@@ -81,9 +101,27 @@
           Download
         </button>
 
-        <button mat-raised-button (click)="onClose()" class="lower-dialog-close-button">
+        <button mat-raised-button (click)="onClose()" class="lower-data-table-close-button">
           Close
         </button>
+
+
+        <button class="kebab-menu"
+                mat-icon-button
+                [matMenuTriggerFor]="menuFriend"
+                matTooltip="Click to view layer menu options"
+                [matTooltipShowDelay]="750">
+          <mat-icon class="dots">more_vert</mat-icon>
+        </button>
+        <mat-menu #menuFriend="matMenu">
+          <button mat-menu-item
+                  (click)="zoomToFeatures()">
+            <i class="fa fa-search-plus fa-2x"></i>
+            Zoom to Feature(s)
+          </button>
+        </mat-menu>
+
+
       </div>
     </div>
 
