--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.css
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.css
@@ -26,6 +26,11 @@ th.mat-header-cell {
 
 /* CLASSES */
 
+/* ::ng-deep.cdk-overlay-pane {
+  resize: both; 
+  overflow: auto;
+} */
+
 ::ng-deep .mat-focused .mat-form-field-label {
   /*change color of label*/
   color: #9DB66B !important;
@@ -56,13 +61,27 @@ th.mat-header-cell {
   text-align: center;
 }
 
+.header-div {
+  display: inline-block;
+  height: 100%;
+  width: 80%;
+}
+
+.header-title {
+  font-size: medium;
+  padding-left: 20%;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
 .kebab-menu {
   float: right;
 }
 
 .lower-data-table-close-button {
   display: inline-block;
-  margin: 3px 20px 0px 20px;
+  margin: 0px 20px 0px 20px;
   background-color: #c2c1c1;
 }
 
@@ -134,7 +153,7 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
 
 .table-info-components {
   height: 11%;
-  padding-top: 20px;
+  padding-top: 1.5%;
   position: relative;
 }
 
@@ -146,7 +165,6 @@ will hide the rest of a long string in a fixed-layout table, and won't wrap, cre
 .table-save-csv {
   display: inline-block;
   background-color: #c2c1c1;
-  margin: 3px 0px 0px 0px;
 }
 
 /* The div surrounding the Mat Table so scrolling will occur if the table is large enough, and it doesn't
@@ -159,6 +177,14 @@ due to the way the table is drawn, but shrinking it slightly to 94.5% is doable 
   padding-left: 15px;
   padding-right: 15px;
   overflow: auto;
+}
+
+.upper-close-button {
+  background-color: #c2c1c1;
+  height: 100%;
+  width: 10%;
+  float: right;
+  outline: none;
 }
 
 .wrapper {
