--- a/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-tstable/dialog-tstable.component.html
@@ -3,13 +3,13 @@
     <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen, but only using the h1 -->
     <div mat-dialog-title cdkDragHandle class="drag-header">
       <!-- Display the geoLayerView name along with data table when showing an attribute table -->
-      <div class="drag-header-div">
-        <p class="drag-header-title">
+      <div class="header-div">
+        <p class="header-title">
           Time Series - Data Table
         </p>
       </div>
       <!-- The close button on the upper right part of the dialog -->
-      <button mat-button (click)="onClose()" class="upper-dialog-close-button">
+      <button mat-button (click)="onClose()" class="upper-close-button">
         <i class="fa fa-times" aria-hidden="true"></i>
       </button>
     </div>
