Issue #317: Updated some issues brought up in feedback

--- a/infomapper/src/app/content-page/content-page.component.css
+++ b/infomapper/src/app/content-page/content-page.component.css
@@ -10,7 +10,7 @@
   /* vh is the percentage of the viewport (or the browser window size), so the height of the Showdown HTML should take
   up 90% of the height */
   height: 85vh;
-  margin: 25px 100px 0px 100px;
+  margin: 25px 20vw 0px 20vw;
   /* If scrolling is not needed, (e.g. the size of the Showdown content is less than 85% of the content page) a scroll bar will
   not be shown. The scroll bar will be shown if it is */
   overflow: auto;
