--- a/infomapper/src/app/map-components/map.component.css
+++ b/infomapper/src/app/map-components/map.component.css
@@ -201,7 +201,7 @@ green that has been represented throughout the rest of the Info Mapper */
 
 .info {
 	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
+	font: 16px Arial, Helvetica, sans-serif;
 	background: white;
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 	border-radius: 5px;
@@ -253,7 +253,7 @@ green that has been represented throughout the rest of the Info Mapper */
 
 .map-title {
   padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
+  font: 16px Arial, Helvetica, sans-serif;
   background: #DCDCDC;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 5px;
@@ -278,7 +278,7 @@ green that has been represented throughout the rest of the Info Mapper */
 	width:550px;
 	height:400px;
 	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
+	font: 16px Arial, Helvetica, sans-serif;
 	background: white;
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 	border-radius: 5px;
@@ -287,7 +287,7 @@ green that has been represented throughout the rest of the Info Mapper */
 
 .popup-info {
 	padding: 6px 8px;
-	font: 14px/16px Arial, Helvetica, sans-serif;
+	font: 16px Arial, Helvetica, sans-serif;
 	background: white;
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 	border-radius: 5px;
