--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -221,7 +221,7 @@
                             </button>
                             <mat-menu #menuFriend="matMenu">
                               <button mat-menu-item
-                                      (click)="openAttributeTableDialog(layerView.geoLayerId, layerView.name)">
+                                      (click)="openDataTableDialog(layerView.geoLayerId, layerView.name)">
                                 <i class="fa fa-table fa-2x"></i>
                                 Data Table
                               </button>
@@ -278,7 +278,7 @@
                               <mat-menu #menuAlone="matMenu">
                                 <button mat-menu-item
                                         class="menu-button"
-                                        (click)="openAttributeTableDialog(layerView.geoLayerId, layerView.name)">
+                                        (click)="openDataTableDialog(layerView.geoLayerId, layerView.name)">
                                   <i class="fa fa-table fa-2x"></i>
                                   Data Table
                                 </button>
