Issue #309: Moved the info button into the kebab menu and added a disable function for displaying it

--- a/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
+++ b/infomapper/src/app/map-components/dialog-content/dialog-data-table/dialog-data-table.component.html
@@ -19,7 +19,10 @@
 
     <mat-form-field>
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter by substring in any column" #input>
+      <input matInput
+              (keyup)="applyFilter($event)"
+              placeholder="Filter all columns using the filter string. Press Enter to execute the filter."
+              #input>
     </mat-form-field>
 
     <cdk-virtual-scroll-viewport tvsItemSize bufferMultiplier="0.7" class="wrapper mat-elevation-z2">
